# BreakNWipe

./: .dockerignore  .gitignore  BLOCKCHAIN_INTEGRATION.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  DESIGN.md  Dockerfile  INTEGRATION_COMPLETE.md  Makefile  README.md  blockchain_config.json  breaknwipe_wrapper.sh  build_packages.sh  demo.sh  docker-compose.yml  install.sh  install_requirements.sh  pyproject.toml  requirements.txt  setup.py  test_blockchain_functionality.py  test_colors.sh  test_qr_consistency.py  uninstall.sh
.github/workflows/: apt-repo.yml  docker-image.yml
apt/: pubkey.gpg
apt/dists/stable/: InRelease  Release  Release.gpg
blockchain/: .env.example  .gitignore  README.md  hardhat.config.ts  package.json  pnpm-lock.yaml
blockchain/contracts/: ReportRegistryWithJson.sol
blockchain/scripts/: deploy.ts
blockchain/test/: ReportRegistry.ts
breaknwipe/: .env.example  __init__.py  utils.py
breaknwipe/breaknwipe-gui/: next.config.ts  package-lock.json  package.json
breaknwipe/breaknwipe-gui/app/: globals.css  layout.tsx  page.tsx
breaknwipe/breaknwipe-gui/components/: algorithm-picker.tsx  app-shell.tsx  device-card.tsx  device-picker.tsx  dialog.tsx  fsck-panel.tsx  health-panel.tsx  hex-viewer.tsx  partition-map.tsx  partition-table.tsx  recovered-file-viewer.tsx  theme.tsx  ui.tsx
breaknwipe/breaknwipe-gui/lib/: algorithms.ts  api.ts  format.ts  hooks.ts  use-websocket.ts
breaknwipe/certificate/: __init__.py  blockchain.py  generator.py  qr.py  report.py  signature.py
breaknwipe/cli/: __init__.py  expert.py  interactive.py  main.py  progress.py
breaknwipe/device/: __init__.py  ata.py  detector.py  erasure_check.py  filesystem.py  fsck.py  handler.py  health.py  hexview.py  mobile.py  nvme.py  partition.py  recovery.py  shredder.py  storage.py
breaknwipe/logging/: __init__.py  database.py  service.py
breaknwipe/web/: __init__.py  models.py  recovery_manager.py  server.py  session_manager.py  shred_manager.py  verify_manager.py
breaknwipe/wipe_engine/: __init__.py  algorithms.py  engine.py  verification.py
datawipe/: .gitignore  example_usage.ts  package.json  pnpm-lock.yaml  test_qr_processing.js
datawipe/src/actions/: BlockReport.ts  DebugContract.ts  (+6 more)
docs/: APT_REPO_SETUP_GUIDE.md  BLOCKCHAIN_INTEGRATION.md  CHANGELOG.md  DISK_TOOLKIT_PLAN.md  DOCKER.md  INTEGRATION_COMPLETE.md  LIVE_USB_PLAN.md
frontend_ui/: about.html  device-detail.html  index.html  logs.html  progress.html  qr-report.html  reports.html  styles.css
frontend_ui/css/: styles.css
scratchpad/: verify_recovery.sh
scripts/: build_packages.sh  demo.sh  install.sh  install_dependencies.sh  quickstart.sh  setup_blockchain_integration.py  uninstall.sh
tests/: test_blockchain_functionality.py  test_shredder.py
(+17 files in other folders)
